--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,5 +37,5 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }},latest
+          tags: zihancr/rdfgenerator:latest
           labels: ${{ steps.meta.outputs.labels }}
